# Permeable_MCDS

./: .gitignore  CMakeLists.txt  DKI.py  Dockerfile.glibc_2.28  MC-DC_Simulator  README.md  check_time_steps.sh  create_ADC_curve.py  dwi_signal_intra.py  eigen_warnings.patch  example_simple.conf  make_conf_file.sh  make_conf_file_cylinders.sh  modify_swc.py  overlapping_spheres_analysis.py  plot_swelling_direction.py  read_trajectories.py  remove_coords.py  run.sh  run2.sh  run_compare_cyl_axons_straight.sh  run_simu.py  run_swelling.sh  simu_params.json  tests.cpp  time_steps_analysis.py  useful_functions.py  vis_neurons.py  vis_neurons_sphere.py
Analysis/Python/: SNR.py  benchmark.py  branching.py  efficiency.py  funnel.py  mesh.py  old_vs_new.py  overlap.py  packing.py  perc_exch.py  signal_vs_analytical.py  test_soma_neurites_analytics_5_n.py  utils.py
docs/conf_file_examples/: create_neurons.conf  mesh_neuron.conf  neurons_from_file.conf  neurons_from_mesh.conf
docs/scheme_files/: PGSE_21_dir_12_b.scheme  PGSE_sample_scheme_21_dir.scheme  PGSE_sample_scheme_new.scheme  b-1000.scheme
instructions/axons/: configuration_model.conf  example_simple.conf
src/: Axon.cpp  Axon.h  Dendrite.cpp  Dendrite.h  Neuron.cpp  Neuron.h  collision.h  collisionsphere.cpp  collisionsphere.h  constants.h  cylinder.cpp  cylinder.h  cylinderdistribution.cpp  dynamicsSimulation.cpp  dynamicsSimulation.h  gammadistribution.cpp  gaussiandistribution.cpp  main  main.cpp  mcsimulation.cpp  mcsimulation.h  neurondistribution.cpp  neurondistribution.h  obstacle.cpp  obstacle.h  parallelmcsimulation.cpp  parallelmcsimulation.h  parameters.cpp  parameters.h  pgsesequence.cpp  sentinel.cpp  simerrno.cpp  simerrno.h  sphere.cpp  sphere.h  spheredistribution.cpp  spheredistribution.h  trajectory.cpp  uniformdistribution.cpp  walker.cpp  (+1 more)
